# CueSpark-hackathon

./: .env.example  .gitignore  AGENTS.md  BUGS.md  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: answers.py  benchmark.py  documents.py  interview.py  jobs.py  reports.py  sessions.py  uploads.py
backend/app/core/: config.py  db.py  redis_client.py  storage.py
backend/app/models/: __init__.py  agent_result.py  answer.py  benchmark_comparison.py  benchmark_profile.py  document.py  embedding_chunk.py  evaluation.py  job.py  question.py  report.py  session.py
backend/app/schemas/: agent_results.py  answer.py  (+8 more)
backend/scripts/: seed_benchmarks.py
backend/tests/: test_agent_result_storage.py  test_ai_settings.py  test_answer_submission_api.py  test_audio_agent.py  test_benchmark_analyzer.py  test_benchmark_api.py  test_benchmark_fixtures.py  test_benchmark_gap_agent.py  test_benchmark_models.py  test_benchmark_retrieval.py  test_benchmark_seed.py  test_chunking.py  test_code_evaluation_agent.py  test_core_product_flow_api.py  test_document_parser.py  test_embeddings.py  test_final_evaluation_orchestrator.py  test_match_analyzer.py  test_multimodal_report_generator.py  test_phase2_models.py  test_prepare_session_task.py  test_process_answer_pipeline.py  test_product_api_contracts.py  test_question_generator.py  test_resume_upload_api.py  test_security_privacy_hardening.py  test_session_api.py  test_session_document_models.py  test_text_answer_agent.py  test_video_signal_agent.py
(+190 files in other folders)
