[project]
name = "hackathon-api"
version = "0.1.0"
description = "FastAPI + worker template for AI hackathons"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.12",
    "pypdf>=5.0.0",
    "python-docx>=1.1.2",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.13.0",
    "redis>=5.1.0",
    "rq>=2.0.0",
    "boto3>=1.35.0",
    "httpx>=0.27.0",
    "python-magic>=0.4.27",
    "loguru>=0.7.2",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "ipython>=8.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
